# naplan-scraper

./: .gitignore  Dockerfile  README.md  School Location 2024.xlsx  WA_schools.csv  WA_schools.html  naplan_scraper.py  pyproject.toml  scrape_all.py
scraper/: aggregate_results.py  generate_school_ids.py  naplan_scraper.py  proxy_selector.py  utils.py
