[tool.poetry]
name = "naplan_scraper"
version = "0.1.0"
description = ""
authors = ["Yass Eltahir <yeltahir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
selenium-recaptcha-solver = "^1.9.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "scratchpad.py"]

line-length = 100

[tool.ruff.lint]
select = ["C", "E", "F", "W", "D", "I", "ANN", "N", "Q", "S", "B"]
ignore = ["ANN101", "ANN204", "E203", "D415", "S101", "I001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
